<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/repository_search_fragment">

    <fragment
        android:id="@+id/repository_search_fragment"
        android:name="jp.co.yumemi.android.code_check.ui.search.RepositorySearchFragment"
        android:label="@string/search_screen_title"
        tools:layout="@layout/fragment_repository_search">
        <action
            android:id="@+id/action_repository_search_fragment_to_repository_detail_fragment"
            app:destination="@id/repository_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/repository_detail_fragment"
        android:name="jp.co.yumemi.android.code_check.ui.detail.RepositoryDetailFragment"
        android:label="{repositoryFullName}"
        tools:layout="@layout/fragment_repository_detail">
        <!-- ActionBarの画面名へ差し込む。ラベルはParcelableの中身を参照できないため別の引数にする。 -->
        <argument
            android:name="repositoryFullName"
            app:argType="string" />
        <argument
            android:name="repositoryItem"
            app:argType="jp.co.yumemi.android.code_check.model.RepositoryItem" />
        <!-- 表示中の結果を取得した時刻。後続の検索が完了しても変わらないよう引数で渡す。 -->
        <argument
            android:name="searchedAtMillis"
            app:argType="long" />
    </fragment>

</navigation>
